Align overview headers correctly
They had different paddings and margins, causing the "Påmeldinger"
header to be pushed further up than the other headers.

Resolves ABA-248

--- a/app/routes/overview/components/CompactEvents.css
+++ b/app/routes/overview/components/CompactEvents.css
@@ -8,10 +8,6 @@
   text-align: left;
 }
 
-.compactEvents h3 {
-  margin-bottom: 10px;
-}
-
 .compactLeft {
   padding-right: 20px;
 }
@@ -19,8 +15,6 @@
 .compactLeft,
 .compactRight {
   flex: 1;
-  padding-top: 5px;
-  padding-bottom: 5px;
 
   @media (--mobile-device) {
     padding: 0 10px 10px;
